# cteepbd

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO
docs/: Manual_cteepbd.tex
docs/imagenes/: csic2.eps  ietcc.eps
src/: asctexml.rs  asplain.rs  balance.rs  components.rs  cte.rs  efficiencies.rs  epbd.rs  error.rs  lib.rs  rennren.rs  rennrenco2.rs  types.rs  vecops.rs  wfactors.rs
src/cte/: balance.rs  components.rs  data.rs  mod.rs  wfactors.rs
src/types/: aux.rs  balance.rs  base.rs  basic.rs  carrier.rs  common.rs  component.rs  components.rs  ctypes.rs  energy_data.rs  factor.rs  factors.rs  gen_aux.rs  gen_cr_in.rs  gen_out.rs  gen_prod.rs  gen_use.rs  hasvalues.rs  meta.rs  mod.rs  prodsource.rs  produced_energy.rs  rennrenco2.rs  service.rs  system_needs.rs  tmeta.rs  used_energy.rs  zone_needs.rs
src/types/balance/: all_carriers.rs  energy_performance.rs  mod.rs  single_carrier.rs
src/types/building/: mod.rs
src/types/energy/: aux.rs  elements.rs  mod.rs  out.rs  prod.rs  used.rs
src/types/needs/: mod.rs
src/types/zones/: mod.rs
test_data/: acs_demanda_ren_con_exclusion_auxiliares.csv  acs_demanda_ren_con_nepb.csv  cteEPBD-N_R09_unif-ET5-V048R070-C1_peninsula.csv  cte_test_carriers.csv  ejemploJ1_base.csv  ejemploJ2_basePV.csv  ejemploJ3_basePVexcess.csv  ejemploJ4_cogen_fuel_boiler.csv  ejemploJ5_gasPV.csv  ejemploJ6_HPPV.csv  ejemploJ7_cogenfuelgasboiler.csv  ejemploJ8_cogenbiogasboiler.csv  ejemploJ9_electr.csv  factores_paso_20140203.csv  factores_paso_BALEARES_20140203.csv  factores_paso_CANARIAS_20140203.csv  factores_paso_CEUTAMELILLA_20140203.csv  factores_paso_PENINSULA_20140203.csv  factores_paso_test.csv  newServicesFormat.csv
test_data/extra/: ejemplo1PV.csv  ejemplo1base.csv  ejemplo1xPV.csv  ejemplo2PVgas.csv  ejemplo2xPVgas.csv  ejemplo3PVBdC.csv  ejemplo4cgnfosil.csv  ejemplo5cgnbiogas.csv  ejemplo6K3.csv
tests/: test_cli.rs  test_cte.rs
