[package]
name = "cteepbd"
version = "0.11.1"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2018"
description = "Computation of energy balance of buildings according to UNE-EN ISO 52000-1:2017 to comply with CTE DB-HE 2018"
repository = "https://github.com/energiacte/cteepbd"
readme = "README.md"
keywords = ["buildings", "energy", "CTE", "DB-HE", "NZEB"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[dependencies]
clap = "2.33.0"
exitcode = "1.1.2"
failure = "0.1.5"
itertools = "0.8.0"
num= "0.2.0"
serde = "1.0.94"
serde_json = "1.0.40"
serde_derive = "1.0.94"
strum = "0.15.0"
strum_macros = "0.15.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
assert_cli = "0.6.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
