[package]
name = "cteepbd"
version = "0.23.1-alpha.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2021"
description = "Computation of energy balance of buildings according to UNE-EN ISO 52000-1:2017 to comply with CTE DB-HE 2018"
repository = "https://github.com/energiacte/cteepbd"
readme = "README.md"
keywords = ["buildings", "energy", "CTE", "DB-HE", "NZEB"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[dependencies]
clap = "2.34.0"
exitcode = "1.1.2"
num= "0.4.0"
once_cell = "1.4.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.78"

[dev-dependencies]
pretty_assertions = "1.0.0"
assert_cli = "0.6.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
